<resources>
    <string name="app_name">Enigmatic Mouse</string>
    <string name="app_version">1.2.1</string>

    <!-- navigation menu. -->
    <string name="navigation_rate">Rate</string>
    <string name="navigation_info">Info</string>
    <string name="navigation_settings">Settings</string>

    <!-- credential list menu -->
    <string name="clear_all_dev">Clear (dev option)</string>
    <string name="menu_logo_cache_clear">Reload logos</string>
    <string name="icons_reloading">Reloading icons</string>
    <string name="icons_reloaded">Icons reloaded</string>
    <string name="navigation_website">Show website</string>
    <string name="website_url">https://enigmatic-mouse.com/</string>
    <string name="app_url">https://play.google.com/store/search?q=enigmatic%20mouse</string>

    <string name="import_menu">Import credential</string>

    <!-- fragment: master key setup. -->
    <string name="master_password_header">Setup master password</string>
    <string name="master_password_hint">Master password</string>
    <string name="master_scan_fp_text">Scan fingerprint to confirm and encrypt</string>
    <string name="fp_title">Scan Fingerprint</string>
    <string name="fp_subtitle">The fingerprint key is used to encrypt your master password.</string>
    <string name="fp_description">Your fingerprint is required to encrypt the master key.</string>
    <string name="fp_cancel">Cancel</string>
    <string name="fp_authenticate">Scan fingerprint to unlock</string>
    <string name="fp_authenticate_fail">Failed to verify, try again.</string>
    <string name="master_crypto_in_progress">Generating keys..</string>
    <string name="master_crypto_verifying">Verifying password..</string>
    <string name="master_authenticate">Tap to authenticate</string>

    <!-- fragment: add credentials. -->
    <string name="password_generate_tap">Tap to generate a strong password</string>
    <string name="password_weak">Weak!</string>
    <string name="password_ok">Hackable!</string>
    <string name="password_strong">Stronk!</string>
    <string name="hint_website">Website address (example.com)</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="credential_save">Save</string>

    <!-- fragment credential information -->
    <string name="info_password_showcopy">Copy or show password</string>
    <string name="created_at_header">Created at</string>
    <string name="credential_unmark_pwned">Acknowledged breach</string>
    <string name="clipboard_failed">Failed to copy to clipboard</string>
    <string name="clipboard_success">Copied to clipboard</string>
    <string name="info_close">Close</string>
    <string name="launch_website">Open browser</string>
    <string name="show_password">Show password</string>
    <string name="copy_clipboard">Copy</string>

    <!-- fragment app info -->
    <string name="github_url">https://github.com/codingchili/enigmatic-mouse</string>
    <string name="tap_octocat">Tap on Octocat to visit us on GitHub</string>
    <string name="app_info_string"><b>Copyright 2018 Robin Duda</b>\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

    <!-- breach list -->
    <string name="pwned_check">Check security lists</string>
    <string name="pwned_check_error">Error retrieving breach list</string>
    <string name="pwned_updating_lists">Updating security lists</string>
    <string name="pwned_list_updated">Security lists updated.</string>
    <string name="credential_breached_header">Security breach - %1$s</string>

    <!-- application settings -->
    <string name="security_list_updated">Security list updated</string>
    <string name="fingerprint_security_header">Fingerprint security</string>
    <string name="lock_on_resume">Lock on resume</string>
    <string name="delay_sensitive_operations">Delay sensitive operations</string>
    <string name="enable_developer_actions">Enable developer actions</string>
    <string name="audit_log">Audit Log</string>

    <!-- dialog delete -->
    <string name="delete_credential">This will irrevocably remove this credential from your device.</string>
    <string name="delete_negative">Cancel</string>
    <string name="delete_positive">Remove!</string>
    <string name="removed_toaster">Removed:</string>

    <!-- dialog clipboard warning -->
    <string name="clipboard_warning">Warning! Other applications on this device can access the clipboard and steal your password.
        Use with caution. This warning will not be shown again.</string>
    <string name="clipboard_positive">Accept</string>
    <string name="clipboard_negative">Stay safe</string>
    <string name="clipboard_warning_heeded">A wise decision, indeed.</string>
    <string name="fp_enabled">enabled</string>
    <string name="fp_not_enabled">disabled</string>

    <!-- audit logging -->
    <string name="audit_fingerprint_authenticated">Authenticated using fingerprint.</string>
    <string name="audit_password_authenticated">Authenticated using password.</string>
    <string name="audit_security_list_update">Updated security lists.</string>
    <string name="audit_displayed_password">Display password: %1$s@%2$s.</string>
    <string name="audit_coped_password">Password to clipboard: %1$s@%2$s.</string>
    <string name="audit_added_credential">Added credential %1$s@%2$s.</string>
    <string name="audit_removed_credential">Removed credential %1$s@%2$s.</string>
    <string name="autofill_name">Autofill by Mouse</string>

</resources>
