<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/fp_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/master_password_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128dp"
            android:scaleType="center"
            app:srcCompat="@drawable/baseline_fingerprint_24" />

        <TextView
            android:id="@+id/master_password_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/master_password_header" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/master_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:hint="@string/master_password_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fp_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/master_scan_fp_text"
            android:textAlignment="center" />
    </RelativeLayout>
</RelativeLayout>
